Edited FAQ to reflect Gitificization. Removed redundant copies of computeBin.php and computeDec.php.

--- a/css/faq.css
+++ b/css/faq.css
@@ -36,3 +36,7 @@ dt {
 	text-decoration:none;
 	background-color:#ccc;
 }
+a[target="_blank"] {
+  background: transparent url('../images/external.png') right center no-repeat;
+  padding-right: 14px;
+  }
