--- a/css/analyzer.css
+++ b/css/analyzer.css
@@ -53,17 +53,17 @@
 }
 
 .hex32Value {
-    border:1px solid green;
+    border:2px solid green;
     padding:.2em;
 }
 
 .hex64Value {
-    border:1px solid blue;
+    border:2px solid blue;
     padding:.2em;
 }
 
 .hex128Value {
-    border:1px solid red;
+    border:2px solid #600;
     padding:.2em;
 }
 
