--- a/css/analyzer.css
+++ b/css/analyzer.css
@@ -53,16 +53,19 @@
 }
 
 .hex32Value {
+    margin-top:1px;
     border:2px solid green;
     padding:.2em;
 }
 
 .hex64Value {
+    margin-top:1px;
     border:2px solid blue;
     padding:.2em;
 }
 
 .hex128Value {
+    margin-top:1px;
     border:2px solid #600;
     padding:.2em;
 }
