--- a/css/analyzer.css
+++ b/css/analyzer.css
@@ -109,7 +109,7 @@ h1 {
   margin:0.5em auto;
   width:15em;
   text-align:center;
-  font-family:Tahoma, Geneva, sans-serif;
+  font-family:sans-serif;
   font-size:2.5em;
   background-color:#666;
   border-radius:0.25em;
@@ -146,7 +146,7 @@ button:hover {
 	padding:.5em;
 	background-color:#eee;
 	border:1px white outset;
-	font-family:Verdana, Geneva, sans-serif;
+	font-family:sans-serif;
 	font-size:18px;
 	text-align:center;
 }
