--- a/css/analyzer.css
+++ b/css/analyzer.css
@@ -4,7 +4,7 @@
 html, body {
   margin:0;padding:0;
   font-family: sans-serif;
-  background-color:#09F;
+  background-color:#0057B7;
   color:#FFF;
 }
 
@@ -81,7 +81,7 @@ html, body {
 }
 
 .block {
-  background-color:#FF6;
+  background-color:#FFDD00;
   color:black;
   border: 1px solid black;
   margin:auto;
